@@ -1,3 +1,11 @@
+2004-12-20  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (struct ppc64_elf_obj_tdata): Add opd_relocs.
+	(opd_entry_value): Use opd_relocs if available.
+	(ppc64_elf_relocate_section): Don't set reloc_done.  Instead
+	copy .opd relocations to opd_relocs.
+	(ppc64_elf_edit_toc): Set rel_hdr.sh_size after editing relocs.
+
 2004-12-16  Richard Sandiford  <rsandifo@redhat.com>
 
 	* reloc.c (BFD_RELOC_V850_LO16_SPLIT_OFFSET): New bfd_reloc_code_type.
@@ -17,7 +25,7 @@
 
 2004-12-14  Tomer Levi  <Tomer.Levi@nsc.com>
 
-	* elf32-crx.c (elf32_crx_relax_delete_bytes): Add 'struct bfd_link_info *' 
+	* elf32-crx.c (elf32_crx_relax_delete_bytes): Add 'struct bfd_link_info *'
 	to prototype, to make hash info available.
 	Prevent wrapped symbols from being adjusted twice.
 
@@ -44,8 +52,8 @@
 	(group_signature): Update calls.
 	* elf-bfd.h (bfd_elf_sym_name): Update.
 	* elf32-ppc.c (ppc_elf_relocate_section): Update.
-	* elf64-ppc.c (ppc64_elf_edit_opd, ppc64_elf_edit_toc) 
-	(ppc64_elf_relocate_section): Update
+	* elf64-ppc.c (ppc64_elf_edit_opd, ppc64_elf_edit_toc): Update.
+	(ppc64_elf_relocate_section): Update.
 	* elflink.c (elf_link_input_bfd): Update.
 
 2004-12-10  Jakub Jelinek  <jakub@redhat.com>
